--- a/oasp-monitoring/pom.xml
+++ b/oasp-monitoring/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.oasp.java</groupId>
     <artifactId>oasp</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.0-SNAPSHOT</version>
   </parent>
   <artifactId>oasp-monitoring</artifactId>
   <version>1.0.0-SNAPSHOT</version>
