updated and simplified - ignore all files and folder starting with dot (.). If you want to add .gitignore you can sill do this manually. Otherwise we will end up with an enormous list of ignores all starting with dot.

--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,9 @@
 *.classpath
 *.project
 *.iml
-.idea/
+.*
 target/
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+eclipse-target/
 
 # Package Files #
 *.jar
