stick to our own package conventions

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
   <modules>
     <module>oasp-logging</module>
     <module>oasp-monitoring</module>
+    <module>oasp-configuration</module>
   </modules>
 
   <properties>
