--- a/oasp-logging/pom.xml
+++ b/oasp-logging/pom.xml
@@ -10,6 +10,7 @@
   <artifactId>oasp-logging</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <name>${project.artifactId}</name>
+  <description>Logging Module of the Open Application Standard Platform for Java (OASP4J).</description>
 
   <dependencies>
     <dependency>
