--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
   <version>1.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>${project.artifactId}</name>
-  <description>Modules of the Open Application Standard Platform (OASP) for Java.</description>
+  <description>Modules of the Open Application Standard Platform for Java (OASP4J).</description>
   <url>http://oasp.org/</url>
   <inceptionYear>2014</inceptionYear>
 
