--- a/oasp-monitoring/pom.xml
+++ b/oasp-monitoring/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.oasp.java</groupId>
-    <artifactId>oasp</artifactId>
+    <artifactId>oasp4j</artifactId>
     <version>1.0.0-SNAPSHOT</version>
   </parent>
   <artifactId>oasp-monitoring</artifactId>
