--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <version>1.1.0.RELEASE</version>
   </parent>
   <groupId>org.oasp.java</groupId>
-  <artifactId>oasp</artifactId>
+  <artifactId>oasp4j</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>${project.artifactId}</name>
