--- a/oasp4j-logging/pom.xml
+++ b/oasp4j-logging/pom.xml
@@ -7,12 +7,16 @@
     <artifactId>oasp4j</artifactId>
     <version>1.0.0-SNAPSHOT</version>
   </parent>
-  <artifactId>oasp-configuration</artifactId>
+  <artifactId>oasp4j-logging</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <name>${project.artifactId}</name>
-  <description>Configuration Module of the Open Application Standard Platform for Java (OASP4J).</description>
+  <description>Logging Module of the Open Application Standard Platform for Java (OASP4J).</description>
 
   <dependencies>
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
