--- a/oasp4j-monitoring/pom.xml
+++ b/oasp4j-monitoring/pom.xml
@@ -7,7 +7,7 @@
     <artifactId>oasp4j</artifactId>
     <version>1.0.0-SNAPSHOT</version>
   </parent>
-  <artifactId>oasp-monitoring</artifactId>
+  <artifactId>oasp4j-monitoring</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <name>${project.artifactId}</name>
   <description>Monitoring Module of the Open Application Standard Platform for Java (OASP4J).</description>
