--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
     <module>oasp4j-logging</module>
     <module>oasp4j-monitoring</module>
     <module>oasp4j-configuration</module>
+    <module>oasp4j-beanmapping</module>
   </modules>
 
   <properties>
