--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
     <module>oasp4j-monitoring</module>
     <module>oasp4j-configuration</module>
     <module>oasp4j-beanmapping</module>
+    <module>oasp4j-security</module>
   </modules>
 
   <properties>
@@ -55,6 +56,11 @@
         <artifactId>commons-dbcp2</artifactId>
         <version>2.0.1</version>
       </dependency>
+      <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-api</artifactId>
+        <version>1.7.7</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
@@ -69,9 +75,12 @@
       <artifactId>logback-classic</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+    </dependency>
   </dependencies>
 
-  
   <build>
     <plugins>
       <plugin>
@@ -85,40 +94,40 @@
 
       <!-- http://mojo.codehaus.org/flatten-maven-plugin/ -->
       <!--
-      <plugin>
+        <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>flatten-maven-plugin</artifactId>
         <version>1.0.0-beta-2</version>
         <configuration>
-          <flattenMode>oss</flattenMode>
+        <flattenMode>oss</flattenMode>
         </configuration>
         <executions>
-          <execution>
-            <id>flatten</id>
-            <phase>process-test-resources</phase>
-            <goals>
-              <goal>flatten</goal>
-            </goals>
-          </execution>
-          <execution>
-            <id>flatten.clean</id>
-            <phase>clean</phase>
-            <goals>
-              <goal>clean</goal>
-            </goals>
-          </execution>
+        <execution>
+        <id>flatten</id>
+        <phase>process-test-resources</phase>
+        <goals>
+        <goal>flatten</goal>
+        </goals>
+        </execution>
+        <execution>
+        <id>flatten.clean</id>
+        <phase>clean</phase>
+        <goals>
+        <goal>clean</goal>
+        </goals>
+        </execution>
         </executions>
-      </plugin>
+        </plugin>
       -->
       <!-- configure java compiler -->
       <plugin>
-         <groupId>org.apache.maven.plugins</groupId>
-         <artifactId>maven-compiler-plugin</artifactId>
-         <configuration>
-           <encoding>${project.build.sourceEncoding}</encoding>
-           <source>1.7</source>
-           <target>1.7</target>
-         </configuration>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <encoding>${project.build.sourceEncoding}</encoding>
+          <source>1.7</source>
+          <target>1.7</target>
+        </configuration>
       </plugin>
 
       <!-- advanced manifests -->
@@ -155,7 +164,7 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-war-plugin</artifactId>
         <configuration>
-        	<packagingExcludes>WEB-INF/lib/*-sources.jar</packagingExcludes>
+          <packagingExcludes>WEB-INF/lib/*-sources.jar</packagingExcludes>
           <warName>${project.artifactId}</warName>
         </configuration>
       </plugin>
@@ -171,29 +180,29 @@
 
       <!-- JaCoCo for test coverage -->
       <!--
-      <plugin>
+        <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
         <executions>
-          <execution>
-            <id>default-prepare-agent</id>
-            <phase>pre-site</phase>
-            <goals>
-              <goal>prepare-agent</goal>
-            </goals>
-          </execution>
-          <execution>
-            <id>default-report</id>
-            <phase>prepare-package</phase>
-            <goals>
-              <goal>report</goal>
-            </goals>
-          </execution>
+        <execution>
+        <id>default-prepare-agent</id>
+        <phase>pre-site</phase>
+        <goals>
+        <goal>prepare-agent</goal>
+        </goals>
+        </execution>
+        <execution>
+        <id>default-report</id>
+        <phase>prepare-package</phase>
+        <goals>
+        <goal>report</goal>
+        </goals>
+        </execution>
         </executions>
-      </plugin>
+        </plugin>
       -->
 
-      <!-- site generation settings-->
+      <!-- site generation settings -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-site-plugin</artifactId>
@@ -214,7 +223,7 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
         <configuration>
-          <!--<notree>true</notree>-->
+          <!--<notree>true</notree> -->
           <show>protected</show>
           <encoding>${project.reporting.outputEncoding}</encoding>
           <charset>${project.build.sourceEncoding}</charset>
@@ -239,32 +248,32 @@
         </configuration>
       </plugin>
       <!--
-      <plugin>
+        <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-changelog-plugin</artifactId>
-      </plugin>
+        </plugin>
       -->
       <!--
-      <plugin>
+        <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-changes-plugin</artifactId>
         <version>2.2</version>
         <configuration>
-          <xmlPath>${basedir}/src/site/changes.xml</xmlPath>
-          <issueLinkTemplate>%URL%/%ISSUE%</issueLinkTemplate>
-          <issueLinkTemplatePerSystem>
-            <github>%URL%/%ISSUE%</github>
-          </issueLinkTemplatePerSystem>
-          <escapeHTML>false</escapeHTML>
+        <xmlPath>${basedir}/src/site/changes.xml</xmlPath>
+        <issueLinkTemplate>%URL%/%ISSUE%</issueLinkTemplate>
+        <issueLinkTemplatePerSystem>
+        <github>%URL%/%ISSUE%</github>
+        </issueLinkTemplatePerSystem>
+        <escapeHTML>false</escapeHTML>
         </configuration>
         <reportSets>
-          <reportSet>
-            <reports>
-              <report>changes-report</report>
-           </reports>
-          </reportSet>
+        <reportSet>
+        <reports>
+        <report>changes-report</report>
+        </reports>
+        </reportSet>
         </reportSets>
-      </plugin>
+        </plugin>
       -->
     </plugins>
   </reporting>
@@ -292,7 +301,7 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-gpg-plugin</artifactId>
             <configuration>
-            	<!--<keyname>todo</keyname>-->
+              <!--<keyname>todo</keyname> -->
             </configuration>
             <executions>
               <execution>
@@ -347,15 +356,15 @@
     </site>
   </distributionManagement>
   <!--
-  <mailingLists>
+    <mailingLists>
     <mailingList>
-      <name>oasp-devel</name>
-      <subscribe>TODO</subscribe>
-      <unsubscribe>TODO</unsubscribe>
-      <post>TODO</post>
-      <archive>TODO</archive>
+    <name>oasp-devel</name>
+    <subscribe>TODO</subscribe>
+    <unsubscribe>TODO</unsubscribe>
+    <post>TODO</post>
+    <archive>TODO</archive>
     </mailingList>
-  </mailingLists>
+    </mailingLists>
   -->
   <organization>
     <name>OASP-Team</name>
