--- a/oasp4j-security/pom.xml
+++ b/oasp4j-security/pom.xml
@@ -19,7 +19,7 @@
       <groupId>org.springframework.security</groupId>
       <artifactId>spring-security-config</artifactId>
     </dependency>
-    
+
     <!-- Test Dependencies -->
     <dependency>
       <groupId>org.springframework</groupId>
@@ -35,6 +35,12 @@
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
       <version>17.0</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>1.9.5</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
