--- a/oasp4j-security/pom.xml
+++ b/oasp4j-security/pom.xml
@@ -20,6 +20,13 @@
       <artifactId>spring-security-config</artifactId>
     </dependency>
 
+    <!-- JSR 330 -->
+    <dependency>
+      <groupId>javax.inject</groupId>
+      <artifactId>javax.inject</artifactId>
+      <version>1</version>
+    </dependency>
+
     <!-- Test Dependencies -->
     <dependency>
       <groupId>org.springframework</groupId>
