--- a/oasp4j-security/pom.xml
+++ b/oasp4j-security/pom.xml
@@ -14,6 +14,18 @@
 
   <dependencies>
 
+    <!-- Spring Web & Servlet necessary for Request Filters -->
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-web</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>3.1.0</version>
+      <scope>provided</scope>
+    </dependency>
+
     <!-- Spring Security -->
     <dependency>
       <groupId>org.springframework.security</groupId>
