--- a/oasp4j-security/pom.xml
+++ b/oasp4j-security/pom.xml
@@ -31,12 +31,23 @@
       <groupId>org.springframework.security</groupId>
       <artifactId>spring-security-config</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-web</artifactId>
+    </dependency>
 
     <!-- JSR 330 -->
     <dependency>
       <groupId>javax.inject</groupId>
       <artifactId>javax.inject</artifactId>
       <version>1</version>
+    </dependency>
+
+    <!-- Used by JsonUsernamePasswordAuthenticationFilter -->
+    <dependency>
+      <groupId>org.codehaus.jackson</groupId>
+      <artifactId>jackson-jaxrs</artifactId>
+      <version>1.9.9</version>
     </dependency>
 
     <!-- Test Dependencies -->
