--- a/pom.xml
+++ b/pom.xml
@@ -328,6 +328,13 @@
         <directory>eclipse-target</directory>
       </build>
     </profile>
+    <profile>
+      <id>sonar</id>
+      <properties>
+        <sonar.jdbc.url>jdbc:mysql://localhost:3306/sonar?useUnicode=true&amp;characterEncoding=utf8&amp;rewriteBatchedStatements=true</sonar.jdbc.url>
+        <sonar.jdbc.username>sonar</sonar.jdbc.username>
+      </properties>
+    </profile>
   </profiles>
   <issueManagement>
     <system>GitHub</system>
