--- a/pom.xml
+++ b/pom.xml
@@ -331,6 +331,7 @@
     <profile>
       <id>sonar</id>
       <properties>
+        <sonar.host.url>http://oasp-ci.cloudapp.net/sonarqube/</sonar.host.url>
         <sonar.jdbc.url>jdbc:mysql://localhost:3306/sonar?useUnicode=true&amp;characterEncoding=utf8&amp;rewriteBatchedStatements=true</sonar.jdbc.url>
         <sonar.jdbc.username>sonar</sonar.jdbc.username>
       </properties>
