#13: Slf4jMdcFilter implemented

--- a/oasp4j-logging/pom.xml
+++ b/oasp4j-logging/pom.xml
@@ -17,6 +17,11 @@
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
     </dependency>
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
 
 </project>
