--- a/oasp4j-documentation/pom.xml
+++ b/oasp4j-documentation/pom.xml
@@ -12,10 +12,74 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    <oasp4j.asciidoc.source>${basedir}/../../oasp4j.wiki/</oasp4j.asciidoc.source>
+    <oasp4j.asciidoc.target>${basedir}/target/asciidoc/</oasp4j.asciidoc.target>
   </properties>
 
   <build>
     <plugins>
+      <!--
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-resources-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>copy-resources</id>
+            <phase>validate</phase>
+            <goals>
+              <goal>copy-resources</goal>
+            </goals>
+            <configuration>
+              <outputDirectory>${oasp4j.asciidoc.target}</outputDirectory>
+              <resources>          
+                <resource>
+                  <directory>${oasp4j.asciidoc.source}</directory>
+                  <filtering>false</filtering>
+                </resource>
+              </resources>              
+            </configuration>            
+          </execution>
+        </executions>
+      </plugin>
+      -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-antrun-plugin</artifactId>
+        <version>1.7</version>
+        <dependencies>
+          <dependency>
+            <groupId>ant-contrib</groupId>
+            <artifactId>ant-contrib</artifactId>
+            <version>1.0b3</version>
+            <exclusions>
+              <exclusion>
+                <groupId>ant</groupId>
+                <artifactId>ant</artifactId>
+              </exclusion>
+            </exclusions>
+          </dependency>
+          <dependency>
+            <groupId>org.apache.ant</groupId>
+            <artifactId>ant-nodeps</artifactId>
+            <version>1.8.1</version>
+          </dependency>
+        </dependencies>
+        <executions>
+          <execution>
+            <id>pre-process-asciidoc</id>
+            <phase>generate-sources</phase>
+            <configuration>
+              <target>
+                <taskdef resource="net/sf/antcontrib/antcontrib.properties" classpathref="maven.plugin.classpath"/>
+                <ant antfile="${basedir}/src/main/ant/build.xml"/>
+              </target>
+            </configuration>
+            <goals>
+              <goal>run</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
       <plugin>
         <groupId>org.asciidoctor</groupId>
         <artifactId>asciidoctor-maven-plugin</artifactId>
@@ -23,7 +87,7 @@
         <configuration>
           <!--<backend>pdf</backend>-->
           <backend>docbook5</backend>
-          <sourceDirectory>${basedir}/../../oasp4j.wiki/</sourceDirectory>
+          <sourceDirectory>${oasp4j.asciidoc.target}</sourceDirectory>
           <sourceDocumentName>OASP4J.asciidoc</sourceDocumentName>
           <doctype>book</doctype>
         </configuration>
