fixed copyright info

--- a/oasp4j-documentation/pom.xml
+++ b/oasp4j-documentation/pom.xml
@@ -91,6 +91,9 @@
           <sourceDocumentName>OASP4J.asciidoc</sourceDocumentName>
           <doctype>book</doctype>
           <imagesDir>./</imagesDir>
+          <attributes>
+            <docinfo>true</docinfo>
+          </attributes>
         </configuration>
         <executions>
           <execution>
