--- a/oasp4j-rest/pom.xml
+++ b/oasp4j-rest/pom.xml
@@ -32,6 +32,11 @@
       <version>1</version>
     </dependency>
     <dependency>
+      <groupId>javax.validation</groupId>
+      <artifactId>validation-api</artifactId>
+      <version>1.1.0.Final</version>
+    </dependency>
+    <dependency>
       <groupId>net.sf.m-m-m</groupId>
       <artifactId>mmm-util-core</artifactId>
       <version>5.0.0</version>
