--- a/oasp4j-rest/pom.xml
+++ b/oasp4j-rest/pom.xml
@@ -14,8 +14,9 @@
 
   <dependencies>
     <dependency>
-      <groupId>org.codehaus.jackson</groupId>
-      <artifactId>jackson-jaxrs</artifactId>
+      <groupId>com.fasterxml.jackson.jaxrs</groupId>
+      <artifactId>jackson-jaxrs-json-provider</artifactId>
+      <version>2.4.2</version>
     </dependency>
     <dependency>
       <groupId>javax.ws.rs</groupId>
