--- a/oasp4j-security/pom.xml
+++ b/oasp4j-security/pom.xml
@@ -45,10 +45,11 @@
 
     <!-- Used by JsonUsernamePasswordAuthenticationFilter -->
     <dependency>
-      <groupId>org.codehaus.jackson</groupId>
-      <artifactId>jackson-jaxrs</artifactId>
-      <version>1.9.9</version>
+      <groupId>com.fasterxml.jackson.jaxrs</groupId>
+      <artifactId>jackson-jaxrs-json-provider</artifactId>
+      <version>2.4.2</version>
     </dependency>
+
 
     <!-- Test Dependencies -->
     <dependency>
