documentation generation improved so we can omit asciidoc extension in includes in order to make them work as links on github.

--- a/oasp4j-documentation/src/main/ant/build.xml
+++ b/oasp4j-documentation/src/main/ant/build.xml
@@ -34,6 +34,7 @@
           <replaceregex pattern="\[\[" replace="[[${filename}_" flags="g"/>
           <replaceregex pattern="^(==+) (.*)" replace="[[${filename}_\2]]${line.separator}\1 \2" flags="g"/>
           <replaceregex pattern="^(=) (.*)" replace="[[${filename}]]${line.separator}\1 \2" flags="g"/>
+          <replaceregex pattern="include\:\:([^\[]*)" replace="include::\1.asciidoc" flags="g"/>
           <!--
           <replaceregex pattern="include\:\:([^.]*)" replace="[[\1]]${line.separator}include::\1" flags="g"/>
           -->
