#39: improved dependencies and -management

--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,12 @@
         <artifactId>moneta</artifactId>
         <version>0.8</version>
       </dependency>
+      <!-- Java Persistence API (2.x not available in groupId javax.persistence) -->
+      <dependency>
+        <groupId>org.hibernate.javax.persistence</groupId>
+        <artifactId>hibernate-jpa-2.1-api</artifactId>
+        <version>1.0.0.Final</version>
+      </dependency>
       <!-- Support for dynamic and type-safe JPA queries -->
       <dependency>
         <groupId>com.mysema.querydsl</groupId>
@@ -105,6 +111,32 @@
         <groupId>javax.ws.rs</groupId>
         <artifactId>javax.ws.rs-api</artifactId>
         <version>2.0</version>
+      </dependency>
+      <!-- CXF for REST and Webservices -->
+      <dependency>
+        <groupId>org.apache.cxf</groupId>
+        <artifactId>cxf-rt-frontend-jaxws</artifactId>
+        <version>${cxf.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.cxf</groupId>
+        <artifactId>cxf-rt-frontend-jaxrs</artifactId>
+        <version>${cxf.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.cxf</groupId>
+        <artifactId>cxf-rt-transports-http</artifactId>
+        <version>${cxf.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.cxf</groupId>
+        <artifactId>cxf-rt-transports-local</artifactId>
+        <version>${cxf.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.cxf</groupId>
+        <artifactId>cxf-rt-rs-client</artifactId>
+        <version>${cxf.version}</version>
       </dependency>
       <!-- Jackson for JSON mapping -->
       <dependency>
