--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <artifactId>spring-boot-dependencies</artifactId>
     <version>1.1.0.RELEASE</version>
   </parent>
-  <groupId>org.oasp.java</groupId>
+  <groupId>io.oasp.java</groupId>
   <artifactId>oasp4j-dependencies</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
@@ -175,32 +175,32 @@
       
       <!-- *** INTERNAL DEPENDENCIES *** -->
       <dependency>
-        <groupId>org.oasp.java</groupId>
+        <groupId>io.oasp.java</groupId>
         <artifactId>oasp4j-monitoring</artifactId>
         <version>1.0.0-SNAPSHOT</version>
       </dependency>
       <dependency>
-        <groupId>org.oasp.java</groupId>
+        <groupId>io.oasp.java</groupId>
         <artifactId>oasp4j-logging</artifactId>
         <version>1.0.0-SNAPSHOT</version>
       </dependency>
       <dependency>
-        <groupId>org.oasp.java</groupId>
+        <groupId>io.oasp.java</groupId>
         <artifactId>oasp4j-beanmapping</artifactId>
         <version>1.0.0-SNAPSHOT</version>
       </dependency>
       <dependency>
-        <groupId>org.oasp.java</groupId>
+        <groupId>io.oasp.java</groupId>
         <artifactId>oasp4j-configuration</artifactId>
         <version>1.0.0-SNAPSHOT</version>
       </dependency>
       <dependency>
-        <groupId>org.oasp.java</groupId>
+        <groupId>io.oasp.java</groupId>
         <artifactId>oasp4j-security</artifactId>
         <version>1.0.0-SNAPSHOT</version>
       </dependency>
       <dependency>
-        <groupId>org.oasp.java</groupId>
+        <groupId>io.oasp.java</groupId>
         <artifactId>oasp4j-rest</artifactId>
         <version>1.0.0-SNAPSHOT</version>
       </dependency>      
