--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,12 @@
         <artifactId>javax.inject</artifactId>
         <version>1</version>
       </dependency>
+      <!-- JSR 250 for common annotations (component-bean lifecycle, security, etc.) -->
+      <dependency>
+        <groupId>javax.annotation</groupId>
+        <artifactId>javax.annotation-api</artifactId>
+        <version>1.2</version>
+      </dependency>
       <!-- Library with general utilities -->
       <dependency>
         <groupId>com.google.guava</groupId>
