--- a/pom.xml
+++ b/pom.xml
@@ -214,7 +214,12 @@
         <groupId>io.oasp.java</groupId>
         <artifactId>oasp4j-rest</artifactId>
         <version>1.0.0-SNAPSHOT</version>
-      </dependency>      
+      </dependency>
+      <dependency>
+        <groupId>io.oasp.java</groupId>
+        <artifactId>oasp4j-jpa</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
