--- a/oasp4j-rest/pom.xml
+++ b/oasp4j-rest/pom.xml
@@ -35,6 +35,10 @@
       <artifactId>validation-api</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context</artifactId>
+    </dependency>
+    <dependency>
       <groupId>net.sf.m-m-m</groupId>
       <artifactId>mmm-util-core</artifactId>
     </dependency>
