link to terms-of-use.html for license

--- a/pom.xml
+++ b/pom.xml
@@ -230,7 +230,7 @@
   <licenses>
     <license>
       <name>Apache Software Licenese</name>
-      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+      <url>http://oasp.github.io/terms-of-use.html</url>
       <distribution>repro</distribution>
       <comments/>
     </license>
