--- a/oasp4j-parent/pom.xml
+++ b/oasp4j-parent/pom.xml
@@ -23,6 +23,7 @@
     <module>../oasp4j-rest</module>
     <module>../oasp4j-security</module>
     <module>../oasp4j-jpa</module>
+    <module>../oasp4j-web</module>
   </modules>
 
   <properties>
