--- a/pom.xml
+++ b/pom.xml
@@ -220,6 +220,11 @@
         <artifactId>oasp4j-jpa</artifactId>
         <version>1.0.0-SNAPSHOT</version>
       </dependency>
+      <dependency>
+        <groupId>io.oasp.java</groupId>
+        <artifactId>oasp4j-web</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
