oasp/oasp4j#87: disabled doclint (only available since jdk8)

--- a/oasp4j-parent/pom.xml
+++ b/oasp4j-parent/pom.xml
@@ -243,7 +243,7 @@
             <encoding>${project.reporting.outputEncoding}</encoding>
             <charset>${project.build.sourceEncoding}</charset>
             <docfilessubdirs>true</docfilessubdirs>
-            <additionalparam>-Xdoclint:none</additionalparam>
+            <!--<additionalparam>-Xdoclint:none</additionalparam>-->
             <links>
               <link>http://docs.oracle.com/javase/7/docs/api/</link>
               <link>http://m-m-m.sourceforge.net/apidocs/</link>
