--- a/oasp4j-parent/pom.xml
+++ b/oasp4j-parent/pom.xml
@@ -55,32 +55,30 @@
       </plugin>
 
       <!-- http://mojo.codehaus.org/flatten-maven-plugin/ -->
-      <!--
-        <plugin>
+      <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>flatten-maven-plugin</artifactId>
-        <version>1.0.0-beta-3-SNAPSHOT</version>
+        <version>1.0.0-beta-3</version>
         <configuration>
-        <flattenMode>oss</flattenMode>
+          <flattenMode>oss</flattenMode>
         </configuration>
         <executions>
-        <execution>
-        <id>flatten</id>
-        <phase>process-test-resources</phase>
-        <goals>
-        <goal>flatten</goal>
-        </goals>
-        </execution>
-        <execution>
-        <id>flatten.clean</id>
-        <phase>clean</phase>
-        <goals>
-        <goal>clean</goal>
-        </goals>
-        </execution>
+          <execution>
+            <id>flatten</id>
+            <phase>process-test-resources</phase>
+            <goals>
+              <goal>flatten</goal>
+            </goals>
+          </execution>
+          <execution>
+            <id>flatten.clean</id>
+            <phase>clean</phase>
+            <goals>
+              <goal>clean</goal>
+            </goals>
+          </execution>
         </executions>
-        </plugin>
-      -->
+      </plugin>
       <!-- configure java compiler -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
